--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -259,3 +259,16 @@
     ストレスに追われ狂ったように働くんじゃなく、無駄を削ぎ落とした持続可能なカーム・カンパニー(穏やかな会社)を設計するための Tips 。
     会社も製品と同じように改善を繰り返し変化していく。会社を良くしていくのは経営者だけじゃなく社員みんなが関係すること。
     これ結構重要よな。所属組織に自分で影響を与えられないと思ってるヒトはかなりいる。主導権が自分達にあるということを忘れてる。
+- date: 2025-12-24
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 28 ~ 54
+  notes: |
+    大志は抑えて。
+    頑張りすぎても創造性・進歩・斬新なアイデアは出てこない。毎日真面目に働くが長く働きすぎないこと。
+    競争に囚われない。比較するより自分たちのやり方で最高にクールなものを作る。
+    目標を立てなくても素晴らしい仕事はできる。目標はときにデタラメな数字の重圧でモラルや誠実さといった健全性に影を落とす。
+    世界を変えようとしなくても良いビジネスはできる。
+    長期計画は偽の安心感や重圧を生む。計画を実行するときに得られる情報が最も有用。そのときに目の前のことに集中する短期計画を立てる。
+    不快感は不確定性や不正に対する人間の反応であり慣れすぎると自分らしさ・モラル・流儀を失う。快適な領域で深く掘り下げて次のレベルに到達する。快適さはカームでいるために不可欠。
+    ここでいう計画は事業計画か。流石にメンテ計画とかはないと場当たり的な気がする。
+    全体的に極めて高い自律性があってこそ成り立つものが多い気がする。落ち着かない部分を直していくというのは良い。内発的動機づけがないと中々やるひとはいない。
