--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -272,3 +272,20 @@
     不快感は不確定性や不正に対する人間の反応であり慣れすぎると自分らしさ・モラル・流儀を失う。快適な領域で深く掘り下げて次のレベルに到達する。快適さはカームでいるために不可欠。
     ここでいう計画は事業計画か。流石にメンテ計画とかはないと場当たり的な気がする。
     全体的に極めて高い自律性があってこそ成り立つものが多い気がする。落ち着かない部分を直していくというのは良い。内発的動機づけがないと中々やるひとはいない。
+- date: 2025-12-25
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 55 ~ 92
+  notes: |
+    自分の時間を大切に。
+    無駄を削ぎ落としすべきことを厳選してそれでも時間に収まらないなら次の週にやればいい。
+    会社が一番守るべきものは従業員の時間と集中力。
+    仕事に集中するのに必要なのは細切れの時間でなくまとまった時間。
+    人間は機械じゃないので生産性よりも効率を上げて空いた時間は仕事以外に好きに使えばいい。
+    勤務時間の長さは勤勉さとイコールではない。
+    注意を逸らすものに満ち溢れた職場の外こそが仕事に集中できるゾーン。
+    エキスパートに質問にできる時間帯を固定してエキスパートの時間を取り戻す。
+    誰でも予定を書き込めるようにカレンダーを共有すべきでない。したら最後予定がびっしり埋まってしまう。
+    同様の理由で居場所や稼働状態を表明しない。メールやチャットのような非同期コミュニケーションにすぐ返事をする必要はない。
+    Fear of Missing Out じゃなく Joy of Missing Out 。重要なことに集中するために、あえて情報を遮断する。
+    リモートワークを最大限有効活用したような印象。
+    実際のところ大抵の職場は賑やかで 23 inch とかのショボいディスプレイしか貸与しないし、落ち着いた自宅に構築したハイスペワークスペースに敵うわけもないねんよな。仕事の本気度が違うねん。
