--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -289,3 +289,19 @@
     Fear of Missing Out じゃなく Joy of Missing Out 。重要なことに集中するために、あえて情報を遮断する。
     リモートワークを最大限有効活用したような印象。
     実際のところ大抵の職場は賑やかで 23 inch とかのショボいディスプレイしか貸与しないし、落ち着いた自宅に構築したハイスペワークスペースに敵うわけもないねんよな。仕事の本気度が違うねん。
+- date: 2025-12-26
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 93 ~ 125
+  notes: |
+    組織文化を育てる。
+    会社は家族ではなくて仕事仲間。無条件の奉仕を求めない。
+    部下は上司のマネをするから、上司が部下にやってほしくないことをやってはいけない。
+    仕事仲間の些細なことでのイライラやストレスに満ちた関係は信頼の電池が切れているから。約束を守るだとかの小さな行動の変化を積み重ねることでしか充電できない。
+    上司が本当に部下の相談に乗りたいなら自分で質問しに行くこと。いつでも相談に乗るよというのは部下への責任の押し付け。
+    会社のオーナーの発言は誰よりも重い。軽はずみに口にしないこと。
+    やってないだけで簡単に得られると思っている成果はまず得られない。やり始めて難しさを痛感する。
+    仕事をこなす力が欲しければ 8 時間ぐっすり眠ること。
+    ワークライフバランスは会社と個人でギブアンドテイクの関係がなければまやかし。
+    人を雇うときは履歴書ではなく試しに仕事をしてもらってその仕事ぶりを見る。
+    信頼の電池、わたしがいう信頼ポイントと多分同じものか。
+    組織の話なのでマネジメントであるとかリーダーシップのよくある話と似たような印象。
