--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -305,3 +305,16 @@
     人を雇うときは履歴書ではなく試しに仕事をしてもらってその仕事ぶりを見る。
     信頼の電池、わたしがいう信頼ポイントと多分同じものか。
     組織の話なのでマネジメントであるとかリーダーシップのよくある話と似たような印象。
+- date: 2025-12-27
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 126 ~ 156
+  notes: |
+    職場によって要求される能力は異なる。つまり即戦力は幻想。
+    可能性に満ちた種は世界のあちこちにいて、それは会社と同じように育てることができる。人材争奪戦に参加する必要はない。
+    同じレベルで働くヒトに同じ給与を払えばストレスのかかる交渉や不安定な SO を気にしなくて良くなる。
+    職場に人を留めるための福利厚生は従業員をはめる罠。やるなら仕事外を充実できるものにすること。
+    典型的な職場はうるさくて創造的な環境を提供できない。やるなら図書館のように穏やかに。
+    無制限に取れる休暇はまやかし。重圧で本当に欲しい休みが取れない。会社からの連絡を断てるのも重要。当然休みの前に仕事を調整をすること。
+    仲間が会社を去るときは別れの挨拶や理由を社内に伝えて穏やかに別れること。残されたヒトたちに疑念が残るのは危うい。
+    もっともな話ばかり。実際会社に都合の良く使える制度は大抵見抜かれてるよな。
+    別れの挨拶はほんと重要と思う。会社が思う以上に人々のつながりがあるしな。
