--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -318,3 +318,17 @@
     仲間が会社を去るときは別れの挨拶や理由を社内に伝えて穏やかに別れること。残されたヒトたちに疑念が残るのは危うい。
     もっともな話ばかり。実際会社に都合の良く使える制度は大抵見抜かれてるよな。
     別れの挨拶はほんと重要と思う。会社が思う以上に人々のつながりがあるしな。
+- date: 2025-12-27
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 157 ~ 187
+  notes: |
+    プロセスを解体する。
+    チャットは素早さが物を言う時・仲間意識を高める上では便利だが、物事を決めるのには向かない。みんなに伝える文章で書くこと。
+    締切が非現実的な恐怖であってはならない。締切を固定しその仕事内容をチーム自身が決め縮小できる必要がある。
+    意見は条件反射的なものであってはならず、よく検討した文書で伝える。文章なら発表するヒトも意見するヒトも発言を邪魔されない。
+    金曜にリリースして休日を緊急対応で終わらせてはならない。どんなに忙しくても月曜にリリースすれば、忙しい中でどうやるか事前に入念な準備をすることにも繋がる。
+    良くない行いでも、それを放って置くと組織文化になる。良い行いをすること。
+    あとで正そうと思っても、繰り返しやっていることは習慣になり変えられなくなる。変えるなら今すぐ。
+    従来の仕事の仕方と違って依存は少ない程よい。その対象はチーム同士の仕事だったりリリースする機能だったりする。
+    決定は担当者が下す。全会一致を求めない。反対意見があっても協力(コミット)することが仕事を前に進める。
+    幾つかはよく知られた Tips と思うがそれぞれの小さな工夫の積み重ねが効果をなすって感じかな。
