--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -332,3 +332,18 @@
     従来の仕事の仕方と違って依存は少ない程よい。その対象はチーム同士の仕事だったりリリースする機能だったりする。
     決定は担当者が下す。全会一致を求めない。反対意見があっても協力(コミット)することが仕事を前に進める。
     幾つかはよく知られた Tips と思うがそれぞれの小さな工夫の積み重ねが効果をなすって感じかな。
+- date: 2025-12-28
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 187 ~ 220
+  notes: |
+    本当に重要なものに最高品質にする努力を注ぎ、他はそこそこでいい。
+    仕事を進めたいならあれこれやろうとせず 1 つのことにコミットしないと完成しない。
+    変化が何か悪い方に作用することもある場合、何もしないことが最強の選択肢となることもある。
+    常に不充分だと感じているとクレイジーに働くようになりストレスで潰れる。足るを知ること。
+    ベストプラクティスは環境や状況によって薬にも毒にもなる。なにより民間伝承を信じて選択肢がないと思い込むのが良くない。
+    「何が何でもやり抜く」ことはリスクや代償について考えられなくする。それが必要な本当の緊急事態は非常に稀なので日常のビジネスではやらないにこしたことはない。
+    多くのことをやり遂げるためにはすべきことを減らすしかない。強迫観念を排除し、する必要のないこと・やりたくないことを断固拒否する。
+    3 人のチームは人が多過ぎず調整も簡単で、みな誠実になり、歩み寄りが生まれる。コミュニケーションの誤解も減る。
+    新しいアイデアを思いついたらまず寝かせる。今の仕事を中断せず終わらせてからアイデアを検討すればただの思いつきなのか本物かがわかる。
+    ノーということは未来の選択肢を広げる。
+    このへんはデマルコ本やエッセンシャル思考なんかと通じてるな。人の営みの本質なのだろうな。
