--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -347,3 +347,18 @@
     新しいアイデアを思いついたらまず寝かせる。今の仕事を中断せず終わらせてからアイデアを検討すればただの思いつきなのか本物かがわかる。
     ノーということは未来の選択肢を広げる。
     このへんはデマルコ本やエッセンシャル思考なんかと通じてるな。人の営みの本質なのだろうな。
+- date: 2025-12-30
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 221 ~ 250
+  notes: |
+    ビジネスに力を入れる。
+    リスクで会社を危険にさらさない。計算されたリスクを取るべき。
+    仕事の単調さがひどい状態を生むこともある。それを軽減するために季節の変化や自然のリズムを取り入れる。
+    クレイジーに働くと赤字になる。赤字は資金とヒトの精神を燃やし尽くす。
+    ユーザー数課金にしない理由。顧客の優劣がなく優先すべき要望がない。大企業との契約のためのゴマすりに巻き込まれない。誰にどんな製品を売りたいかをはっきりさせること。
+    作ったものに対する本当の意見を聞くには市場に出すしかない。
+    約束はしない法がいい。約束したが最後、それの実現のために大急ぎで他のものを諦めて取り組む必要が出てくる。
+    誰かが製品・デザイン・アイデアを模倣したことに怒っても意味がない。模倣した側はその成果の経緯を知らないという一番の害を被っているし、模倣された側も特許でも取っていない限りできることはない。無視して前に進もう。
+    ヒトは自分で望んだ変化なら受け入れるがそうでないなら拒絶する。だから古い顧客には古い機能が売れる・新しい顧客には新しい機能が売れるようにしておく。新しい機能が作れるのは古い顧客がいたからだ。遺産を誇ろう。
+    最後の遺産の話は結構示唆的と思った。どこのシステムもレガシーシステムを刷新することしか考えてなくて古きを保ったままモダナイズするみたいな文脈は少ない。
+    現職は訳あってほぼ古いシステムのままモダナイズしたが、戦略的にレガシーを活かすこともあり得るんやな。その分運用は大変だが。
