--- a/contents/booklogs/2025/2025-12.yml
+++ b/contents/booklogs/2025/2025-12.yml
@@ -362,3 +362,13 @@
     ヒトは自分で望んだ変化なら受け入れるがそうでないなら拒絶する。だから古い顧客には古い機能が売れる・新しい顧客には新しい機能が売れるようにしておく。新しい機能が作れるのは古い顧客がいたからだ。遺産を誇ろう。
     最後の遺産の話は結構示唆的と思った。どこのシステムもレガシーシステムを刷新することしか考えてなくて古きを保ったままモダナイズするみたいな文脈は少ない。
     現職は訳あってほぼ古いシステムのままモダナイズしたが、戦略的にレガシーを活かすこともあり得るんやな。その分運用は大変だが。
+- date: 2025-12-31
+  bookTitle: NO HARD WORK! 無駄ゼロで結果を出す僕らの働き方
+  pages: 251 ~ 278
+  notes: |
+    ビジネスは始めるのは簡単で始まったあとの方が大変。早めに燃え尽きないように心の準備をしておくこと。
+    人々は意見が尊重されないことを嫌う。たいしたことでないと扱わず世界の終わりかのように扱うと、相手はたいしたことでないと思う選択肢を選ぶ。
+    あえてビジネスを縮小し持続可能で制御可能なサイズを維持する。ゆっくりと全体を見ながら成長できる。
+    おわりに。
+    クレイジーに働くことを減らし穏やかに働くことを増やす。自分や人々が仕事に集中できる時間を奪わせずに守る。カーム・カンパニーは選択肢。
+    これで本書は終わり。今年読んだ本とかなり通ずるものがあったな。実践の結果としての知見が多いので裏付けの部分は希薄だったが、そこは他の本を読んでたことで補えた。今読んで良かったな。
