--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -10,3 +10,12 @@
     実際自動テストに関してはかなり思うところがあるわ。自分で作る分はどうにでもなるがな。
     前作 The Phoenix Project と The DevOps Handbook も読んでるけど内容はほぼ覚えてないので新鮮な気持ちで読めてる。
     現職は組織も小さく DevOps は考え方として当たり前なので普段意識しないが、去年古典に触れたり読み直した本で得るものがあったし、改めて読むのも良さそうに思った(あと頁数がちょうど良い感じだった)。
+- date: 2026-01-02
+  bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
+  pages: 135 ~ 180
+  notes: |
+    第 1 部 7 ~ 8 章。
+    どん底のシステム開発組織を少しずつ改善していくみたいな取っ掛かりの話。
+    規模の大きい組織では分離独立が重要であるという点、安全に仕事できることの重要さ、何気ない日常的な手抜きがシステムの将来に悪影響を与えそれを日常的に改善していくという本質に触れてる。
+    1 つ気に食わなかったのは、関数型プログラミングのスタイルでスレッドセーフなコードにすぐに書き換えたという件。純粋関数だけでそんな簡単に race condition を解消できるかな？
+    わたしも関数型の信奉者だが、一般的にデータハブというチーム特性を考えると、純粋な操作が与える性能の影響に触れられてないのは違和感があった。小説と割り切るかどうかってとこかもな。
