--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -19,3 +19,13 @@
     規模の大きい組織では分離独立が重要であるという点、安全に仕事できることの重要さ、何気ない日常的な手抜きがシステムの将来に悪影響を与えそれを日常的に改善していくという本質に触れてる。
     1 つ気に食わなかったのは、関数型プログラミングのスタイルでスレッドセーフなコードにすぐに書き換えたという件。純粋関数だけでそんな簡単に race condition を解消できるかな？
     わたしも関数型の信奉者だが、一般的にデータハブというチーム特性を考えると、純粋な操作が与える性能の影響に触れられてないのは違和感があった。小説と割り切るかどうかってとこかもな。
+- date: 2026-01-03
+  bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
+  pages: 181 ~ 211
+  notes: |
+    第 1 部 9 ~ 10 章。
+    QA ・開発・運用の各チームが平等に扱われない問題点とセクショナリズム。
+    必要な人たちに必要な権限が付与されない矛盾とプロセスに盲目的に従うことの危険性。
+    組織構造の欠陥がそのままシステムを複雑怪奇で敏捷性のないものにしてしまう点が描かれてた。
+    実際こういう組織はよく見てきた。そういう慣習を引きずったままの人がデカい merge をして破壊するのもよく見た。
+    個々人が現状を疑う能力を持たないとこの状況からは逃れるきっかけは現れないねんよな。
