--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -29,3 +29,11 @@
     組織構造の欠陥がそのままシステムを複雑怪奇で敏捷性のないものにしてしまう点が描かれてた。
     実際こういう組織はよく見てきた。そういう慣習を引きずったままの人がデカい merge をして破壊するのもよく見た。
     個々人が現状を疑う能力を持たないとこの状況からは逃れるきっかけは現れないねんよな。
+- date: 2026-01-04
+  bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
+  pages: 212 ~ 253
+  notes: |
+    第 1 部 11 ~ 12 章。
+    責務に合わせて分離し、むやみに統合しない。敏捷性と自律性を得るには責任が伴う。リードタイム短縮のためのコミュニケーションパスの最適化。
+    この章でもおえらいさんの力を使わないと組織構造を変えて例外を作れなかったように、権力がない場合は個々人が現状を疑い組織構造の問題を解決するためにあれこれ手を打つしかないというのが本当のところよな(一部のサイコパスなおえらいさんを除き)。
+    こういうのに気付くと(諸々面倒なので)融通がきく小規模組織でしか働く気がなくなって、次第に少し大きな組織でも働けなくなってしまうというのが、また悩ましい。
