--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -37,3 +37,13 @@
     責務に合わせて分離し、むやみに統合しない。敏捷性と自律性を得るには責任が伴う。リードタイム短縮のためのコミュニケーションパスの最適化。
     この章でもおえらいさんの力を使わないと組織構造を変えて例外を作れなかったように、権力がない場合は個々人が現状を疑い組織構造の問題を解決するためにあれこれ手を打つしかないというのが本当のところよな(一部のサイコパスなおえらいさんを除き)。
     こういうのに気付くと(諸々面倒なので)融通がきく小規模組織でしか働く気がなくなって、次第に少し大きな組織でも働けなくなってしまうというのが、また悩ましい。
+- date: 2026-01-05
+  bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
+  pages: 254 ~ 306
+  notes: |
+    第 2 部 13 章。
+    心理的安全性が保証された非難なしのポストモーテムと、顧客第一の考え方を育むために現場での仕事を体験するという話。
+    第 3 部 14 章。
+    イベントストリーミングが分離独立と個々の進化を推進する(ただし本書では採用せずマネージドサービスを使った)。あとは楽しみや感謝が開発を加速させるって感じか。
+    現場を体験させる、これ自体はすごく良い取組だが個人的に苦手なのでそれをサラリとやってのける人に憧れる。
+    現職はアプリの会社なのでアプリを自分で使うことで特定のセグメントだけは理解できてたら良いのだが。
