--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -47,3 +47,13 @@
     イベントストリーミングが分離独立と個々の進化を推進する(ただし本書では採用せずマネージドサービスを使った)。あとは楽しみや感謝が開発を加速させるって感じか。
     現場を体験させる、これ自体はすごく良い取組だが個人的に苦手なのでそれをサラリとやってのける人に憧れる。
     現職はアプリの会社なのでアプリを自分で使うことで特定のセグメントだけは理解できてたら良いのだが。
+- date: 2026-01-06
+  bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
+  pages: 307 ~ 439
+  notes: |
+    第 3 部 15 ~ 19 章、エピローグ、参考文献など。一気に読んだ。
+    概ねサクセスストーリーの部分。活動が良い方向に働き出すと流れがどんどん強くなるようなもの。 FP のくだりも含めて学習が波及していく組織の強さを表してるのかなと。
+    組織でとなると 1 人の学習がその周りに響いて内発的な動機づけが伝播していかないと効果を発揮しないねんよな。本書でも情熱ある人の集まりで始まるし、ワインバーグ氏・デマルコ氏の著書でも触れられてたような感じ。
+    事故がなくてもポストモーテムしてリスクの予兆を改善に繋げる。コアとコンテキストに分けてコアに集中するというのはホント重要。エッセンシャル思考に通ずる。
+    本書はこれで終わり。最後の方のサクセスストーリーは出来すぎてグッと来なかったが面白かった。
+    前作を全然覚えてないし読み直しても良いかもな。それと参考文献に載ってる積読本や物語の中で触れられたものを読むのも良さそう。
