--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -107,3 +107,6 @@
 - id: the-unicorn-project
   bookTitle: The DevOps 勝利をつかめ！ 技術的負債を一掃せよ
   bookAuthor: Gene Kim, 榊原彰, 長尾高弘
+- id: team-of-teams
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  bookAuthor: Stanley McChrystal, Tantum Collins, David Silverman, Chris Fussell, 吉川南, 尼丁千津子, 高取芳彦
