--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -57,3 +57,14 @@
     事故がなくてもポストモーテムしてリスクの予兆を改善に繋げる。コアとコンテキストに分けてコアに集中するというのはホント重要。エッセンシャル思考に通ずる。
     本書はこれで終わり。最後の方のサクセスストーリーは出来すぎてグッと来なかったが面白かった。
     前作を全然覚えてないし読み直しても良いかもな。それと参考文献に載ってる積読本や物語の中で触れられたものを読むのも良さそう。
+- date: 2026-01-07
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 1 ~ 22
+  notes: |
+    序文、はじめに。
+    状況が高速に複雑に変化する現代では、小さなチームがネットワークで繋がれたチームがもつ適応力こそが重要。
+    縦割りの階層化された大規模組織の予測と計画による効率性は必要条件ではあるが、もはや十分条件ではない。
+    変化への適応性、チームワーク、意識の共有、信頼、権限委譲。
+    これ序文すごない？マネジメントの本で見てきたような話が相当まとまってる感じがした。
+    はじめにも面白い。絶えず変化していくしか生き残る道がないというのが本質やな。そのためにどのように取り組むかというところか。
+    本がゴツすぎて読みにくいのだけが難点。
