--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -68,3 +68,12 @@
     これ序文すごない？マネジメントの本で見てきたような話が相当まとまってる感じがした。
     はじめにも面白い。絶えず変化していくしか生き残る道がないというのが本質やな。そのためにどのように取り組むかというところか。
     本がゴツすぎて読みにくいのだけが難点。
+- date: 2026-01-08
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 23 ~ 60
+  notes: |
+    第Ⅰ部 第 1 章。
+    AQI のような情報化された相互関連性と即時伝達能力を活かし、分散ネットワーク化して常に変化する敵に対応するためには、効率性を重視した従来の組織ではない環境に対する適応能力が必要となる。
+    そのために透明性の高い情報共有(意識の共有)と決定権の分散化(実行権限の付与)の方針のもと、小規模チームが結合した有機的で柔軟な組織に変化する必要があった。
+    歴史からの学びとして、ネルソン提督の本当の才能は、撹乱作戦よりも部下に自律と批判的思考を育て上げた日頃からのマネジメントとリーダーシップであるととく。
+    章末のポイントがよく書かれてて自分でまとめるまでもない気もするが何とかひねり出して自分の気になったところをまとめる練習としておく。
