--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -77,3 +77,14 @@
     そのために透明性の高い情報共有(意識の共有)と決定権の分散化(実行権限の付与)の方針のもと、小規模チームが結合した有機的で柔軟な組織に変化する必要があった。
     歴史からの学びとして、ネルソン提督の本当の才能は、撹乱作戦よりも部下に自律と批判的思考を育て上げた日頃からのマネジメントとリーダーシップであるととく。
     章末のポイントがよく書かれてて自分でまとめるまでもない気もするが何とかひねり出して自分の気になったところをまとめる練習としておく。
+- date: 2026-01-09
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 61 ~ 96
+  notes: |
+    第Ⅰ部 第 2 章。
+    従来の戦場では厳しい訓練で培った厳密な標準化と統一性が戦場という特殊な状況に予測可能性と秩序をもたらしそれが素早く効果的だった。
+    フレデリック・ウィンスロー・テイラーと要素還元主義の例。産業の機械化により手工業の時代よりも複雑な作業が必要となったが、標準化により効率性を高めた。
+    この考えが階層化組織の基礎。米軍特任部隊も同様だったが、全く新しい敵に直面したことでそれらを捨て去る必要があった。
+    産業の機械化のくだりで漸くわかったが、この環境の変化と組織構造の対比って、つまり環境が技術の進化によって変わる速度に組織構造の変化がついていってないという話やねんな。
+    階層化組織の構造は意図的に手を加えないと変わらないので、うまく行かないことに気づいたときかなり遅れてると。
+    常に変化し続ける必要があるわけ。
