--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -88,3 +88,13 @@
     産業の機械化のくだりで漸くわかったが、この環境の変化と組織構造の対比って、つまり環境が技術の進化によって変わる速度に組織構造の変化がついていってないという話やねんな。
     階層化組織の構造は意図的に手を加えないと変わらないので、うまく行かないことに気づいたときかなり遅れてると。
     常に変化し続ける必要があるわけ。
+- date: 2026-01-10
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 97 ~ 135
+  notes: |
+    第Ⅰ部 第 3 章。
+    ローレンツのバタフライ効果。複雑と難解は異なる。
+    複雑系は要素間の相互依存性により非線形的に振る舞う。それが影響を及ぼすのかどうかも事実上予測不可能。複雑系の例として気象・経済・ NGO ・外来種等。
+    複雑さは予測を前提としたマネジメントと根本的に相容れない。ビッグデータでさえも、複雑な現象が如何に起こったかを知るのには役立つが、予測には役立たない。
+    昨日感じた技術の進化が世界の変化の速度を高め従来の組織構造が通用しなくなったという話と繋がる。
+    参考とする文書も凄く多いので積読候補やな。
