--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -98,3 +98,14 @@
     複雑さは予測を前提としたマネジメントと根本的に相容れない。ビッグデータでさえも、複雑な現象が如何に起こったかを知るのには役立つが、予測には役立たない。
     昨日感じた技術の進化が世界の変化の速度を高め従来の組織構造が通用しなくなったという話と繋がる。
     参考とする文書も凄く多いので積読候補やな。
+- date: 2026-01-11
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 136 ~ 154
+  notes: |
+    第Ⅰ部 第 4 章。
+    復元力(resilience)とは「システムが混乱を吸収し、なお基礎的な機能と構造を保持する力」をいう。
+    例としてオランダの流水管理の方針転換。効率化は不測の事態に対する復元力を損なう。
+    効率化≒専門化で予測の範囲外の事態に対応できなくなる。強固さが弾力性を損なう。
+    階層化組織は上意下達の効率化で対処すべき問題が別れている限りは問題ない。
+    ただしネットワーク型の組織に対しては無力で、対抗するには同様にネットワーク型の組織に変化する必要があった。
+    デマルコ氏の著書で触れられてた話と同じだ。極度に最適化されてゆとりが無い組織は急激な変化に対応できない。
