--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -109,3 +109,15 @@
     階層化組織は上意下達の効率化で対処すべき問題が別れている限りは問題ない。
     ただしネットワーク型の組織に対しては無力で、対抗するには同様にネットワーク型の組織に変化する必要があった。
     デマルコ氏の著書で触れられてた話と同じだ。極度に最適化されてゆとりが無い組織は急激な変化に対応できない。
+- date: 2026-01-12
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 155 ~ 207
+  notes: |
+    第Ⅱ部 第 5 章。
+    チームが発揮する能力は個々人の能力の総和を上回る。
+    軽微なトラブルながら墜落したユナイテッド航空 173 便と危機的な状況でも全員が助かった US エアウェイズ 1549 便の対比は、上意下達の組織の脆さとチームの適応力を示している。
+    ネイビーシールズは類稀なる個々人の能力を持つが、本質は地獄の訓練 BUD/S で培われたチームワークにある。
+    ユナイテッド航空 173 便の悲劇の本質は、技術が発展し難解でなく複雑化したコクピット、機長が単独で全てを理解しようとしたチームワークの欠如にある。
+    CRM(crew resource management) の導入により事故数は著しく低下したのは、緊急事態にチームを形成して共通の目的に邁進する能力が向上したため。
+    特殊部隊もその成り立ちは同様だったが、さらなる複雑化に対応するために大規模な組織全体をチーム化する必要があった。
+    共通の目的に向かう情熱があってのチームというのはデマルコ本などでも触れられていたのと同じ。ほぼ一人で仕事してるとこういう情熱があるチームはやはり憧れるな。
