--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -121,3 +121,12 @@
     CRM(crew resource management) の導入により事故数は著しく低下したのは、緊急事態にチームを形成して共通の目的に邁進する能力が向上したため。
     特殊部隊もその成り立ちは同様だったが、さらなる複雑化に対応するために大規模な組織全体をチーム化する必要があった。
     共通の目的に向かう情熱があってのチームというのはデマルコ本などでも触れられていたのと同じ。ほぼ一人で仕事してるとこういう情熱があるチームはやはり憧れるな。
+- date: 2026-01-13
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 208 ~ 236
+  notes: |
+    第Ⅱ部 第 6 章。
+    特任部隊のチーム自体の適応力は高いが、それが命令型の階層化組織の元で束ねられると予測不能な敵にの前に十分に機能しない。
+    従来の組織は MECE のように重なり合いがないが、共通の目的を持ち信頼関係があるチームには MECE でない重なり≒繋りが必要。チームが信頼関係を築ける人数的な制約。他チームのことを考えないチーム同士の壁。
+    これらの解決案として「チームのなかのチーム」各チームが他のチームの数人と本当のチームのような信頼関係を結ぶことで互いのチームの相互依存的になるよう仕向ける。
+    ここに来て人月の神話も出てきた。チームがうまくいく人数規模も Two pizza team に近い。色々繋がってる。
