--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -130,3 +130,12 @@
     従来の組織は MECE のように重なり合いがないが、共通の目的を持ち信頼関係があるチームには MECE でない重なり≒繋りが必要。チームが信頼関係を築ける人数的な制約。他チームのことを考えないチーム同士の壁。
     これらの解決案として「チームのなかのチーム」各チームが他のチームの数人と本当のチームのような信頼関係を結ぶことで互いのチームの相互依存的になるよう仕向ける。
     ここに来て人月の神話も出てきた。チームがうまくいく人数規模も Two pizza team に近い。色々繋がってる。
+- date: 2026-01-14
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 237 ~ 250
+  notes: |
+    第Ⅲ部 第 7 章。
+    F3EA(Find,Fix,Finish,Exploit,Analyze)の各段階が如何に高速でも部門間の連携のブリンク(接触不良)は取り除けない。
+    ブリンクの多くは技術的地理的制約よりも社会的なもの。分業化や機密漏洩を恐れた関係者以外極秘はその最たるもの。
+    計画がうまくいくには全員が全体の流れに目を向けなければならない。
+    夜間作業以降寝る時間取れなかったので読み切る体力ない。明日読み直す。
