--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -139,3 +139,14 @@
     ブリンクの多くは技術的地理的制約よりも社会的なもの。分業化や機密漏洩を恐れた関係者以外極秘はその最たるもの。
     計画がうまくいくには全員が全体の流れに目を向けなければならない。
     夜間作業以降寝る時間取れなかったので読み切る体力ない。明日読み直す。
+- date: 2026-01-15
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 251 ~ 272
+  notes: |
+    第Ⅲ部 第 7 章。
+    NASA がソ連に対して大きく遅れていたのを挽回したのは、ジョージ・ミュラーが組織のマネジメントをシステム思考的に変えたことが大きい。
+    片や要素還元的な ELDO は組織のブリンクで 5 度の失敗を重ねて解体された。
+    相互依存と予測が立たない未知の要素で構成された領域には、最新情報を広く共有し小さなチームで認識を共有することで生まれる知性の創発が重要な鍵となる。
+    その様な組織文化を運用維持するのに相応のコストがかかることも、 NASA のその後の失敗から学べる。
+    訓練で予想される問題だけに対する強固な対応力を得るよりも、教育で復元力のある基礎的な能力を培う。
+    昨日の分は読み直さなくても割と読めてた。創発とシステム思考も読んでないから積読したいな。あとブリンクって表現気に入ってきた。接触不良。
