--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -150,3 +150,15 @@
     その様な組織文化を運用維持するのに相応のコストがかかることも、 NASA のその後の失敗から学べる。
     訓練で予想される問題だけに対する強固な対応力を得るよりも、教育で復元力のある基礎的な能力を培う。
     昨日の分は読み直さなくても割と読めてた。創発とシステム思考も読んでないから積読したいな。あとブリンクって表現気に入ってきた。接触不良。
+- date: 2026-01-16
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 273 ~ 302
+  notes: |
+    第Ⅲ部 第 8 章。
+    仕事場の物理的な配置がコミュニケーションに与える影響。一般的な整理されたオフィスほど阻害され、一つの場所に集まるほど促進される。
+    例としてベル研究所やブルームバーグ時代のニューヨーク市庁舎。
+    物理的な配置に加え、常に最新の重要な情報が関係者誰にでも手に入る状況とコミュニケーションチャネルを作る。
+    得られる情報が有用だとわかれば人が自然に集まりコミュニケーションが促進される。
+    情報の透明性には漏洩のリスクが伴うが、情報を規制することよりも得られる利益の方が大きい。
+    デマルコ氏の著書で見た話と同じ。にも関わらずキュービクルに労働者を詰め込み近視眼的に仕向ける組織は多い。
+    経営の予測性を高めるためことと、知性の創発を促進することは相反するようだが、適応すべき領域にあわせてバランスを取るべきなんやろな。バランスが取れてないところが多いのだろうけど。
