--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -162,3 +162,14 @@
     情報の透明性には漏洩のリスクが伴うが、情報を規制することよりも得られる利益の方が大きい。
     デマルコ氏の著書で見た話と同じ。にも関わらずキュービクルに労働者を詰め込み近視眼的に仕向ける組織は多い。
     経営の予測性を高めるためことと、知性の創発を促進することは相反するようだが、適応すべき領域にあわせてバランスを取るべきなんやろな。バランスが取れてないところが多いのだろうけど。
+- date: 2026-01-17
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 303 ~ 348
+  notes: |
+    第Ⅲ部 第 9 章。
+    従来の組織構造は情報の不透明性と組織感の競争から囚人のジレンマに陥っており、情報の透明性と信頼の欠如が最善の結果を妨げていた。
+    信頼関係を築くには時間がかかるが、チームの要員を相互に交換することが互いの目的を理解し全体像を育むことで、信頼関係を築くことになった。
+    囚人のジレンマの例として、 20 世紀は順調だったがその後苦境に立つ GM と、苦境をワーキング・トゥギャザーで乗り越えたフォードの対比。
+    情報の透明性と信頼関係が、意識の共有によるマネジメントにおける重要な 2 要素。
+    交流が生産性を高めるのはペンドランドの研究でも示されている。
+    この章も見たことあるような話やな。 GM の話は積読してる GM の本に載ってるのかも知れんし読む動機付けされた。
