--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -173,3 +173,12 @@
     情報の透明性と信頼関係が、意識の共有によるマネジメントにおける重要な 2 要素。
     交流が生産性を高めるのはペンドランドの研究でも示されている。
     この章も見たことあるような話やな。 GM の話は積読してる GM の本に載ってるのかも知れんし読む動機付けされた。
+- date: 2026-01-18
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 303 ~ 348
+  notes: |
+    第Ⅳ部 第 10 章。
+    情報の透明性と信頼による意識の共有がパフォーマンスを向上させたが、最後に意思決定のボトルネックが残っていた。
+    実際に意思決定を上位層に集中させても、意思決定の品質が高まるわけでなく、むしろ現場に意思決定を委譲した方が迅速かつ的確になる場合が多い。
+    裁量の拡大と意思決定の集中の例としてペリー提督。権限移譲の例としてリッツ・カールトンとノードストロームを挙げる。
+    この章もマネジメントの文脈で学んだ内容。ヒト自体がボトルネックになる以上、分散化するしかないんやろな。
