--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -182,3 +182,12 @@
     実際に意思決定を上位層に集中させても、意思決定の品質が高まるわけでなく、むしろ現場に意思決定を委譲した方が迅速かつ的確になる場合が多い。
     裁量の拡大と意思決定の集中の例としてペリー提督。権限移譲の例としてリッツ・カールトンとノードストロームを挙げる。
     この章もマネジメントの文脈で学んだ内容。ヒト自体がボトルネックになる以上、分散化するしかないんやろな。
+- date: 2026-01-19
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 383 ~ 408
+  notes: |
+    第Ⅳ部 第 11 章。
+    現代のリーダーシップは、かつての英雄的リーダーが全てを制御するものでなく、文化を想像することに変わった。
+    情報の透明性が高まっても、その膨大な情報を処理仕切れずボトルネックになる。
+    それに代わり、チームが自律的な行動を取れる環境を菜園主のように手入れするのが現代のリーダーシップで極めて重要であり、またその仕事はリーダーでしかできない。
+    マイクロマネジメントすべきでないという話はよくあるが、本書の場合は情報の透明性を高めた結果として膨大な情報量と極めて速い状況変化の前提があるから、リーダーがボトルネックになる話の裏付けになって、いいな。
