--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -110,3 +110,6 @@
 - id: team-of-teams
   bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
   bookAuthor: Stanley McChrystal, Tantum Collins, David Silverman, Chris Fussell, 吉川南, 尼丁千津子, 高取芳彦
+- id: thinking-fast-and-slow
+  bookTitle: ファスト&スロー あなたの意思はどのように決まるか？
+  bookAuthor: Daniel Kahneman, 村井章子
