--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -191,3 +191,11 @@
     情報の透明性が高まっても、その膨大な情報を処理仕切れずボトルネックになる。
     それに代わり、チームが自律的な行動を取れる環境を菜園主のように手入れするのが現代のリーダーシップで極めて重要であり、またその仕事はリーダーでしかできない。
     マイクロマネジメントすべきでないという話はよくあるが、本書の場合は情報の透明性を高めた結果として膨大な情報量と極めて速い状況変化の前提があるから、リーダーがボトルネックになる話の裏付けになって、いいな。
+- date: 2026-01-19
+  bookTitle: ファスト&スロー あなたの意思はどのように決まるか？
+  pages: 1 ~ 36
+  notes: |
+    序論。輪読会で読み始めた。
+    直感のバイアスとそのエラーを知る。ヒューリスティックとバイアス、意思決定といった研究成果を見ていく。
+    速い思考システム 1 と遅い思考システム 2 。ヒューリスティック、バイアス、そして記憶に基づく直感的解決はシステム 1 。
+    その後熟慮熟考のシステム 2 へ切り替わる。認知心理学が研究の軸足だが、意思決定のプロセスをモデル化したから経済界隈に喜ばれたって流れっぽいな。
