--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -199,3 +199,14 @@
     直感のバイアスとそのエラーを知る。ヒューリスティックとバイアス、意思決定といった研究成果を見ていく。
     速い思考システム 1 と遅い思考システム 2 。ヒューリスティック、バイアス、そして記憶に基づく直感的解決はシステム 1 。
     その後熟慮熟考のシステム 2 へ切り替わる。認知心理学が研究の軸足だが、意思決定のプロセスをモデル化したから経済界隈に喜ばれたって流れっぽいな。
+- date: 2026-01-20
+  bookTitle: TEAM OF TEAMS 複雑化する世界で戦うための新原則
+  pages: 409 ~ 451
+  notes: |
+    第Ⅴ部 第 12 章。謝辞。
+    敵から学んだネットワークの力により、効率的なマシンから適応力のある複雑な生命体となり、敵を凌駕した。
+    トクヴィルが民主制の分散型統治に背景理解と権力分散が必要なことを見出したのと同様に、マネジメントにおいても意識の共有と実行権限の付与が必要とされる。
+    一見危険で無秩序に見える状態も、旧来のメンタルモデルに縛られ新しい発想を受け入れられないだけかもしれない。
+    テイラーが工業化により新たなマネジメントを生み出したように、チームのなかのチームも複雑さを生み出したテクノロジーそのものによって生まれた新たな組織構造といえる。
+    本書はこれで終わり。技術も進歩と組織構造の変化が対になるイメージは情報量がポイントなんやろな。
+    原注の参考文献も気になってた本が載ってるしまた積読が増えそう。面白かった。また読もう。
