--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -113,3 +113,6 @@
 - id: thinking-fast-and-slow
   bookTitle: ファスト&スロー あなたの意思はどのように決まるか？
   bookAuthor: Daniel Kahneman, 村井章子
+- id: ge-giants-revival
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  bookAuthor: 中田 敦
