--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -210,3 +210,13 @@
     テイラーが工業化により新たなマネジメントを生み出したように、チームのなかのチームも複雑さを生み出したテクノロジーそのものによって生まれた新たな組織構造といえる。
     本書はこれで終わり。技術も進歩と組織構造の変化が対になるイメージは情報量がポイントなんやろな。
     原注の参考文献も気になってた本が載ってるしまた積読が増えそう。面白かった。また読もう。
+- date: 2026-01-21
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 1 ~ 43
+  notes: |
+    TEAM OF TEAMS で GE に触れられてたし良い機会なので読む。去年買ってたらしいが理由は失念した。
+    プロローグ。ウェルチが脱製造業を進めていたのに対し、リーマンショックの金融事業の打撃を受けてウェルチ路線が会社を危機に陥れたとイメルトは考えた。
+    製造業回帰を目指し、脱製造業の内に起こったデジタルディスラプションを乗り超えるために DX に取り組んだ。
+    変化をいとわない GE の学ぶ文化は変わらないまま、ウェルチ時代が日本の製造業の生産方式から学んだのと同じ様に、イメルトはシリコンバレーのスタートアップを徹底的に見習った。
+    GE の DX の話ぽいな。調べたところその後 DX だけでは企業の評価は上げきれずイメルトは退任、巨大になり過ぎた会社は分割されコングロマリット時代は終わった、みたいな感じかな。
+    ウェルチ時代を利益追求のためにゆとりを削除した効率化と捉えれば、複雑化した時代に対応するためにイメルトが組織を作り直そうと方向転換しようとしたのはわかりやすい。
