--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -220,3 +220,14 @@
     変化をいとわない GE の学ぶ文化は変わらないまま、ウェルチ時代が日本の製造業の生産方式から学んだのと同じ様に、イメルトはシリコンバレーのスタートアップを徹底的に見習った。
     GE の DX の話ぽいな。調べたところその後 DX だけでは企業の評価は上げきれずイメルトは退任、巨大になり過ぎた会社は分割されコングロマリット時代は終わった、みたいな感じかな。
     ウェルチ時代を利益追求のためにゆとりを削除した効率化と捉えれば、複雑化した時代に対応するためにイメルトが組織を作り直そうと方向転換しようとしたのはわかりやすい。
+- date: 2026-01-22
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 24 ~ 43
+  notes: |
+    第 1 章。 GE がデジタル参入するまで。
+    リーマン・ショックで金融事業がダメージを受けて製造業へ回帰する際に、デジタルディスラプションに対抗するため本業である製造業を DX しようとした。
+    GE にとってはメインフレーム、 IT アウトソーシングに続いて 3 度目のデジタル参入だが、本業をデジタル化するのは初めて。
+    スタートアップがメディアやエネルギーや医療などの GE の中核事業を蹂躙したのに加え、 IBM が GE の顧客の業界にデジタルサービスを売る戦略を進めたので、対抗するにはそれしかなかったともいえる。
+    シリコンバレーの流儀を学び、デジタル事業部門も立ち上げた。
+    ①自社の製造事業をデジタル化により効率化する、②販売する機器のデータを収集して効率的な運用や故障予防といったサービスを販売する、③自社の製造業デジタル化に伴い開発した技術を新しい顧客に販売する、3 つの戦略。
+    デジタルに舵を切った理由は分かるが製造業に回帰した理由ははっきり書いてないな。祖業で実績があるから勝てると見たとかかな。
