--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -231,3 +231,14 @@
     シリコンバレーの流儀を学び、デジタル事業部門も立ち上げた。
     ①自社の製造事業をデジタル化により効率化する、②販売する機器のデータを収集して効率的な運用や故障予防といったサービスを販売する、③自社の製造業デジタル化に伴い開発した技術を新しい顧客に販売する、3 つの戦略。
     デジタルに舵を切った理由は分かるが製造業に回帰した理由ははっきり書いてないな。祖業で実績があるから勝てると見たとかかな。
+- date: 2026-01-23
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 24 ~ 43
+  notes: |
+    第 2 章。 GE デジタルの誕生。
+    報酬は並だが、シリコンバレーの穴場に居を構えて中心地の物価高騰や通勤疲れのエンジニアをターゲットに変革に参加できるというビジョンを売り込んだ。
+    GE 外から大量のエンジニアを雇用。リーンスタートアップとアジャイル開発を導入。
+    自社製品だけでなく他社製品も繋げられる IoT ネットワークで製造業のプラットフォーマーを目指した。
+    調べたら結局 GE デジタルも Predix も解体され各事業部の内部組織に組み込まれたみたいなので、外部から人を集めたのも含め典型的な Center of Excellence の失敗例みたいな感じかな。
+    素早く立ち上げるには CoE がいいんやろけど。
+    にしても立地を採用戦略に使うのは面白いな。
