--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -242,3 +242,17 @@
     調べたら結局 GE デジタルも Predix も解体され各事業部の内部組織に組み込まれたみたいなので、外部から人を集めたのも含め典型的な Center of Excellence の失敗例みたいな感じかな。
     素早く立ち上げるには CoE がいいんやろけど。
     にしても立地を採用戦略に使うのは面白いな。
+- date: 2026-01-24
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 78 ~ 103
+  notes: |
+    第 3 章。 GE のデジタルサービスについて。
+    Airbnb や Uber 同様に、既にある資産、 GE の場合は販売した産業機械から得られる収入を最大化するサービス。
+    産業機器の CAD データから得られた物理モデルとセンサリングデータから生み出した機械学習モデルが鍵。
+    Google や Amazon に比べてデータ量が少ない点や産業機器に求められる高精度さを物理モデルのシミュレーションでカバーする。
+    サブスクだけでなく成果報酬型も揃える。
+    様々な産業機械のデータをつなげたデジタルスレッドが故障予測だけでなく産業機械や施設の運用効率化を生む。
+    長年蓄えられた産業機械のドメイン知識とセンサリングデータの統合しやすさが GE の強み。
+    本書の時代が多少古いのもありちょっとデータ分析におけるデータ収集部分を甘く見てる感じはするな。
+    データが汚いとか。例え同じ会社でも組織が異なればスキーマの調整はそううまくいかんやろう。
+    ビジネスの構造としては至極まっとうな感じがしたので、ビジネスを進める中で顧客が着いてこれなかったとか GE 内での連携がうまくいかなかったとかあるんやろな。
