--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -256,3 +256,13 @@
     本書の時代が多少古いのもありちょっとデータ分析におけるデータ収集部分を甘く見てる感じはするな。
     データが汚いとか。例え同じ会社でも組織が異なればスキーマの調整はそううまくいかんやろう。
     ビジネスの構造としては至極まっとうな感じがしたので、ビジネスを進める中で顧客が着いてこれなかったとか GE 内での連携がうまくいかなかったとかあるんやろな。
+- date: 2026-01-25
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 104 ~ 137
+  notes: |
+    第 4 章。 GE の開発手法。
+    リーンスタートアップの GE 版 FastWorks をデジタルに留まらず全社的に使う。顧客に要件定義させず自分たちでヒアリングして MVP を作る。
+    課題の解決策はデザイン思考でアイデア出しする。リーンスタートアップの源流にあるリーン生産方式の現地現物も取り入れている。開発はアジャイルでペアプログラミングを取り入れる。
+    この様なスピード感のある手法に対応できる組織ではなかったので、組織の単純化・権限移譲で変化しようとした。
+    デザイナーがファシリテーターとして機能する。データサイエンティストは科学者として活動する。コラボレーションを促進するオフィス等、 GE はこれらのシリコンバレーの規律を学び取り入れた。
+    今ではよく知られたプラクティスで特に気になるでもないが、仮に GE デジタルが解体されてもこれらが文化レベルで浸透していれば、今の GE は組織として次のステージに進めていると考えられるな。実態はどうかしらんけど。
