--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -266,3 +266,11 @@
     この様なスピード感のある手法に対応できる組織ではなかったので、組織の単純化・権限移譲で変化しようとした。
     デザイナーがファシリテーターとして機能する。データサイエンティストは科学者として活動する。コラボレーションを促進するオフィス等、 GE はこれらのシリコンバレーの規律を学び取り入れた。
     今ではよく知られたプラクティスで特に気になるでもないが、仮に GE デジタルが解体されてもこれらが文化レベルで浸透していれば、今の GE は組織として次のステージに進めていると考えられるな。実態はどうかしらんけど。
+- date: 2026-01-26
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 138 ~ 165
+  notes: |
+    第 6 章。 GE が開発したサービス。
+    GE が Predix を作ったのは産業機器のデータを収集・分析する資産のためのシステム(System of Asset)がなかったから。 SoR ではだめ。エッジデバイスも提供する。
+    ミドルウェア・マイクロサービス・業務システムの三層。ミドルウェアは OSS と 3rd party の SaaS 。大部分で OSS を利用して最新技術に追いつく戦略。大量のセンサリングデータを分散処理して関連付けをグラフ DB で行う。
+    この章の内容は技術史として正確じゃなさそうなので程々でいいかとに思った。そういうナラティブにしたかったのだろうが Google そっくりというのはちょっと雑な気がした。
