--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -274,3 +274,13 @@
     GE が Predix を作ったのは産業機器のデータを収集・分析する資産のためのシステム(System of Asset)がなかったから。 SoR ではだめ。エッジデバイスも提供する。
     ミドルウェア・マイクロサービス・業務システムの三層。ミドルウェアは OSS と 3rd party の SaaS 。大部分で OSS を利用して最新技術に追いつく戦略。大量のセンサリングデータを分散処理して関連付けをグラフ DB で行う。
     この章の内容は技術史として正確じゃなさそうなので程々でいいかとに思った。そういうナラティブにしたかったのだろうが Google そっくりというのはちょっと雑な気がした。
+- date: 2026-01-27
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 165 ~ 181
+  notes: |
+    第 5 章。 GE が開発したサービス。
+    デジタルスレッドが施設や作業の可観測性を高める。 Predix で提供される膨大な API はマイクロサービスで実装されていて業務アプリケーションからはそれを使う。
+    エッジデバイスの一部はオフラインで使える代わりに利用できる API が制限して提供される。
+    将来は非破壊検査のための超小型ロボットもエッジデバイスに加える計画だった。
+    Predix を利用する新しい顧客も現れた。 LIXIL は GE の危機を使わず純粋に Predix でシステムを構築、ピツニーボウズ Predix の上に独自のマイクロサービスを構築し、それを販売した。
+    ここだけ読むとプラットフォームとして成功してそうだが、今は畳んでるし期待ほど伸びなかっただけなんか、或いは。この本だけだといい所しか書いておらず正しく評価できないな。
