--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -284,3 +284,14 @@
     将来は非破壊検査のための超小型ロボットもエッジデバイスに加える計画だった。
     Predix を利用する新しい顧客も現れた。 LIXIL は GE の危機を使わず純粋に Predix でシステムを構築、ピツニーボウズ Predix の上に独自のマイクロサービスを構築し、それを販売した。
     ここだけ読むとプラットフォームとして成功してそうだが、今は畳んでるし期待ほど伸びなかっただけなんか、或いは。この本だけだといい所しか書いておらず正しく評価できないな。
+- date: 2026-01-28
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 182 ~ 199
+  notes: |
+    第 6 章。デジタルで変わる製造現場。
+    ディーゼルエンジンの分解・修理を担う工場での徹底的な可視化・自動収集・無駄の排除・単純化・ポカヨケ・文化。
+    施設の稼働状況、施設内機器のセンサー取り付け、デジタルカメラによる画像認識、作業員が携行する Bluetooth デバイス等で集めた情報に基づく改善活動。
+    作業を単純化しミス低減、顧客第一の文化を作り出す。ここでいう顧客第一は、 GE に関連する他の工場へのナレッジの共有、作業員の安全・効率を指す。
+    エンジン部品の製造に導入された 3D プリンター。従来より軽く耐久性能も上げられる。また 3D プリンター市場でも存在感を見せる。
+    この辺りは今にしてみれば製造現場の DX としてありそうな話やが時代を考えれば相当進んでたんやろうな。
+    GE デジタルと Predix を畳んだ後も社内の DX の成果は生き続けるだろうし。
