--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -248,11 +248,11 @@
   notes: |
     第 3 章。 GE のデジタルサービスについて。
     Airbnb や Uber 同様に、既にある資産、 GE の場合は販売した産業機械から得られる収入を最大化するサービス。
-    産業機器の CAD データから得られた物理モデルとセンサリングデータから生み出した機械学習モデルが鍵。
+    産業機器の CAD データから得られた物理モデルとセンシングデータから生み出した機械学習モデルが鍵。
     Google や Amazon に比べてデータ量が少ない点や産業機器に求められる高精度さを物理モデルのシミュレーションでカバーする。
     サブスクだけでなく成果報酬型も揃える。
     様々な産業機械のデータをつなげたデジタルスレッドが故障予測だけでなく産業機械や施設の運用効率化を生む。
-    長年蓄えられた産業機械のドメイン知識とセンサリングデータの統合しやすさが GE の強み。
+    長年蓄えられた産業機械のドメイン知識とセンシングデータの統合しやすさが GE の強み。
     本書の時代が多少古いのもありちょっとデータ分析におけるデータ収集部分を甘く見てる感じはするな。
     データが汚いとか。例え同じ会社でも組織が異なればスキーマの調整はそううまくいかんやろう。
     ビジネスの構造としては至極まっとうな感じがしたので、ビジネスを進める中で顧客が着いてこれなかったとか GE 内での連携がうまくいかなかったとかあるんやろな。
@@ -272,7 +272,7 @@
   notes: |
     第 5 章。 GE が開発したサービス。
     GE が Predix を作ったのは産業機器のデータを収集・分析する資産のためのシステム(System of Asset)がなかったから。 SoR ではだめ。エッジデバイスも提供する。
-    ミドルウェア・マイクロサービス・業務システムの三層。ミドルウェアは OSS と 3rd party の SaaS 。大部分で OSS を利用して最新技術に追いつく戦略。大量のセンサリングデータを分散処理して関連付けをグラフ DB で行う。
+    ミドルウェア・マイクロサービス・業務システムの三層。ミドルウェアは OSS と 3rd party の SaaS 。大部分で OSS を利用して最新技術に追いつく戦略。大量のセンシングデータを分散処理して関連付けをグラフ DB で行う。
     この章の内容は技術史として正確じゃなさそうなので程々でいいかとに思った。そういうナラティブにしたかったのだろうが Google そっくりというのはちょっと雑な気がした。
 - date: 2026-01-27
   bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
