--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -295,3 +295,16 @@
     エンジン部品の製造に導入された 3D プリンター。従来より軽く耐久性能も上げられる。また 3D プリンター市場でも存在感を見せる。
     この辺りは今にしてみれば製造現場の DX としてありそうな話やが時代を考えれば相当進んでたんやろうな。
     GE デジタルと Predix を畳んだ後も社内の DX の成果は生き続けるだろうし。
+- date: 2026-01-29
+  bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
+  pages: 200 ~ 232
+  notes: |
+    第 7 章、おわりに。 DX のための文化。
+    GE の製造する産業機器に失敗が許されないため文化もそうなっていた。 DX では素早く失敗し学びを得て次に繋げる必要があるため文化を変える必要があり、社訓と人事制度を変えた。
+    従来の階層化した人事評価では、従業員が学びのリアルタイムなフィードバックを得られない・ラベリングによるストレスがあったため、能力開発に集中して人事評価を廃止した。人事制度もリーンスタートアップに従い転換・改善を重ねる。
+    それら文化の変革も経営層の理解と熱意があってこそ後押しされる。
+    人事評価の廃止は良いな。きちんと評価しない、ランク付けされてもその通りの雇用条件にならない、現場がギスギスする、とか悪い点しか経験したことないわ。
+    著者は元々 MS を追ってたが、その 2000 年代の凋落を経て台頭したシリコンバレーのスタートアップの強さを知ることになったと。だからそれに倣う GE はすごい的な。
+    とはいえ方法論があるから強いというのは物語化が過ぎるかな。デマルコ氏のマネジメントにあるような思考プロセスの重要さなんじゃないかな。方法論が思考プロセスを育むというのもあるけど。
+    あとから言うのは簡単なのでアレやけど、結局 GE はコングロマリットを分解しなければならなかったというの反証もあるしな。でもこれだけ組織文化を変えたなら生き続けるものもあろうしその点では成功したんじゃないかな。
+    本書はこれで終わり。
