--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -116,3 +116,6 @@
 - id: ge-giants-revival
   bookTitle: GE 巨人の復活 シリコンバレー式「デジタル製造業」への挑戦
   bookAuthor: 中田 敦
+- id: breaking-through-gridlock
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  bookAuthor: Jason J Jay, Gabriel Grant, 樋口武志
