--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -308,3 +308,13 @@
     とはいえ方法論があるから強いというのは物語化が過ぎるかな。デマルコ氏のマネジメントにあるような思考プロセスの重要さなんじゃないかな。方法論が思考プロセスを育むというのもあるけど。
     あとから言うのは簡単なのでアレやけど、結局 GE はコングロマリットを分解しなければならなかったというの反証もあるしな。でもこれだけ組織文化を変えたなら生き続けるものもあろうしその点では成功したんじゃないかな。
     本書はこれで終わり。
+- date: 2026-01-30
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 1 ~ 16
+  notes: |
+    序文。
+    人間同士が競争して追い求める無限の物質的成長はゼロサムゲームであり人類や地球の生物の未来に貢献しない。
+    問題の本質は勝敗で決まるものではなく本質的に人類の未来に関わるもの。
+    この問題の対処法は奮闘するか変化するしかない。変化はあきらめでなく違う角度から内部外部の障害を認識・取り除くこと。
+    世界をより良くする行いは日々その実践されるため、その根幹をなすが会話重要であり会話がその根幹をなす。本書はその指導と実践の良いアドバイスになる。
+    序文難しいなこれ。学習する組織のセンゲ氏。
