--- a/contents/booklogs/2026/2026-01.yml
+++ b/contents/booklogs/2026/2026-01.yml
@@ -318,3 +318,13 @@
     この問題の対処法は奮闘するか変化するしかない。変化はあきらめでなく違う角度から内部外部の障害を認識・取り除くこと。
     世界をより良くする行いは日々その実践されるため、その根幹をなすが会話重要であり会話がその根幹をなす。本書はその指導と実践の良いアドバイスになる。
     序文難しいなこれ。学習する組織のセンゲ氏。
+- date: 2026-01-31
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 17 ~ 34
+  notes: |
+    まえがき。イントロダクション。
+    会話がより良い世界を築いていく。会話には筋書きはなく優れた会話術のようなものものない。
+    ただ特定の視点や考え方に固執した自分を拡張し未来にあった姿勢に変えていくのみ。
+    本書は元々がワークショップだったのもあり途中にエクササイズが挟まる。
+    エクササイズの積み重ねてがのステップの基礎になり、自身の内省を促し会話の変革をもたらす。
+    まだふわついた読後感がして素直に言葉が染み込んでこない気がするがとりあえず続けてみる。
