--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -10,3 +10,12 @@
     オーセンティシティは過去の行動の一貫性でなく、未来に見合う自己の姿の一貫性。
     本書も優秀なまとめがあって自分の言葉でまとめても似通ってくるな。とはいえまとめ直しても同じなら仕方ないか。
     フレーミングを使う相手は自分自身というのがこの章のポイントな気がする。
+- date: 2026-02-02
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 63 ~ 78
+  notes: |
+    2 行き詰まりを抜け出すカギ。
+    従来のオーセンティシティは過去からの一貫した振る舞いを指すが、未来の想像に関しては行き詰まる可能性がある。
+    自分の目指す未来に合わせて変化していく動的なオーセンティシティが必要になる。それは自分の中の未来に忠実でない一面を見つけ認めることでもある。
+    自分を客観視するのは難しいからコーチ役になってくれるパートナーを見つける、というのはぼっちのわたしには難しいな。 AI で壁打ちするか。
+    未来を目指す上で重要なのが自身が変わることというのは複雑性に対処するのと共通する点やな。
