--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -19,3 +19,14 @@
     自分の目指す未来に合わせて変化していく動的なオーセンティシティが必要になる。それは自分の中の未来に忠実でない一面を見つけ認めることでもある。
     自分を客観視するのは難しいからコーチ役になってくれるパートナーを見つける、というのはぼっちのわたしには難しいな。 AI で壁打ちするか。
     未来を目指す上で重要なのが自身が変わることというのは複雑性に対処するのと共通する点やな。
+- date: 2026-02-03
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 79 ~ 106
+  notes: |
+    3 会話から透けて見える思考。
+    相手と会話するときには自分の内側の声・声にならない声が影響していて振る舞いから漏れ出る。
+    つまり行き詰まりの原因は自分のあり方であり、自分が目指す未来にそぐわない・誇れない振る舞いを認め変えていく必要がある。
+    それは自分の内面にあるあり方でなく、相手から見た自分のあり方に対して責任を持つということ。
+    なんとなくわかってきたが、会話という媒介を通して自分自身の目指す未来を実現するための行動変容を目指すのが本書やな多分。
+    自分のあり方に固執せず目指す未来を実現するために自分自身を変えていく、ということみたい。興味が湧いてきた。
+    ちょっとエクササイズの自分の回答を覚えきれなくなってきたので、別途メモを取って臨んだ方が良さそう。
