--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -30,3 +30,13 @@
     なんとなくわかってきたが、会話という媒介を通して自分自身の目指す未来を実現するための行動変容を目指すのが本書やな多分。
     自分のあり方に固執せず目指す未来を実現するために自分自身を変えていく、ということみたい。興味が湧いてきた。
     ちょっとエクササイズの自分の回答を覚えきれなくなってきたので、別途メモを取って臨んだ方が良さそう。
+- date: 2026-02-04
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 107 ~ 134
+  notes: |
+    4 行き詰まった会話から得ているもの。
+    会話の行き詰まりはそこから利益得ることで陥る。落とし穴の中にエサがあるように罠に落ちる。
+    そのエサは、正しさ・善行・揺るぎなさ・安全性といったもの。誰しも安全圏にいるのは落ち着くが、何かを変えようと思ったら安全圏から抜け出す必要がある。
+    自分が嵌っている落とし穴を特定するには、よくある落とし穴の例を知り自分の具体的な会話を振り返ってみること。
+    また自分がどのようなエサを追っていて、その代償に未来に対して何を払っているかを知ること。
+    徹底した自己の客観視とコンフォートゾーンから抜け出すあたりが実に行動変容らしい。よくある落とし穴はとても参考になるな。
