--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -40,3 +40,14 @@
     自分が嵌っている落とし穴を特定するには、よくある落とし穴の例を知り自分の具体的な会話を振り返ってみること。
     また自分がどのようなエサを追っていて、その代償に未来に対して何を払っているかを知ること。
     徹底した自己の客観視とコンフォートゾーンから抜け出すあたりが実に行動変容らしい。よくある落とし穴はとても参考になるな。
+- date: 2026-02-05
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 135 ~ 172
+  notes: |
+    5 事実による説得を超えて。
+    エサを手放し行き詰まりから抜け出すには、自分を行動に突き動かす内発的動機を知る必要がある。
+    多くは自分をさらけ出すことに不安を感じ、理論や正しさといった外発的動機で偽装してしまう。
+    だがそれはオーセンティシティが欠如した状態であり、相手の心を動かすことはできない。
+    自分の内発的動機づけを知れば、そこから自分が望む未来に向けた新しいあり方を築き上げるきっかけになる。
+    行動変容に内発的動機づけが重要なのはよく知っているが、ここに来てその内発的動機は倫理学の直観のようなものに近いと感じてきた。
+    自分の大切に思うこと、深いところの価値観に沿った行動がオーセンティシティがあるといえるのかな。
