--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -51,3 +51,13 @@
     自分の内発的動機づけを知れば、そこから自分が望む未来に向けた新しいあり方を築き上げるきっかけになる。
     行動変容に内発的動機づけが重要なのはよく知っているが、ここに来てその内発的動機は倫理学の直観のようなものに近いと感じてきた。
     自分の大切に思うこと、深いところの価値観に沿った行動がオーセンティシティがあるといえるのかな。
+- date: 2026-02-06
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 173 ~ 196
+  notes: |
+    6 会話に命を取り戻す。
+    謝ることの力。率直に自分が食いついていたエサを認め、相手の行動を改めさせるのでなく自身の変化を示す。
+    一見自身の弱さをさらけ出すようだし、はじめは怪しまれることもあるが、誠実さを貫けば時間とともに信頼を得られ関係の強化につながる。
+    こういった行動を起こすためにはいくつかの障害を乗り越える必要があり、そのためには自身の新たな行動を相手にコミットメントとして示すことが有効。
+    謝ることの力、というのは頷けるものがある。柔軟に状況に応じて自己を変化させ目指す未来に対して責任を持つ、というのが本書の主題かな。
+    わたしも頑なになって謝らないことがあるし、何なら変化を求める際には積極的に謝ってもいいよなという気になってきた。とはいえ悦に浸る相手には安売りは禁物やろうな。
