--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -61,3 +61,15 @@
     こういった行動を起こすためにはいくつかの障害を乗り越える必要があり、そのためには自身の新たな行動を相手にコミットメントとして示すことが有効。
     謝ることの力、というのは頷けるものがある。柔軟に状況に応じて自己を変化させ目指す未来に対して責任を持つ、というのが本書の主題かな。
     わたしも頑なになって謝らないことがあるし、何なら変化を求める際には積極的に謝ってもいいよなという気になってきた。とはいえ悦に浸る相手には安売りは禁物やろうな。
+- date: 2026-02-07
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 197 ~ 226
+  notes: |
+    7 違いこそが変革を生む。
+    行き詰まりは異なる価値観の間の妥協過ぎる案を取ることによるものがある。
+    一見相反する価値観も対立を乗り越えて二者択一でない新しい領域の解決策を見出すことができる。
+    まず両者が互いの価値観を知ること。これには関心圏と道徳的基盤が使える。
+    次に対立を認め、自分自身が二項対立のどちらも選べない二面性を持つことを受け入れる。
+    異なる価値観も受け入れることができれば、妥協点といったトレードオフを乗り越え、新しいアイデアの想像につながる。
+    本書で言ってる自分を変える必要があるというのは自分の価値観を保ったまま行動を変えるって意味なので、やはり行動変容やな。
+    対立を認めるってくだりどこかで見たなと思ったらデマルコ氏の著書でも度々触れられてた。対立で留め置く行動がそもそも真摯に取り組んでないということになるんやろな。
