--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -73,3 +73,13 @@
     異なる価値観も受け入れることができれば、妥協点といったトレードオフを乗り越え、新しいアイデアの想像につながる。
     本書で言ってる自分を変える必要があるというのは自分の価値観を保ったまま行動を変えるって意味なので、やはり行動変容やな。
     対立を認めるってくだりどこかで見たなと思ったらデマルコ氏の著書でも度々触れられてた。対立で留め置く行動がそもそも真摯に取り組んでないということになるんやろな。
+- date: 2026-02-08
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 227 ~ 250
+  notes: |
+    8 対立を超えた会話。
+    会話の行き詰まりや対立は個人だけでなく組織的な運動の全体でも起こる。
+    例えば社会運動内でその活動が現実的かビジョナリーかといった対立が起こることがある。
+    こういった運動の中の会話も、個人で見たようなエサに釣られて落とし穴に陥る。
+    不調なので今日はここまで。しかし自分自身の行動変容は自分の問題なのでいくらか制御可能だが、運動が対象となるとその構成する人々が関わるので難しそう。
+    といっても真に運動に参加するものなら志を同じくするから、比較的行動変容を促しやすいのかもしれんが。
