--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -83,3 +83,13 @@
     こういった運動の中の会話も、個人で見たようなエサに釣られて落とし穴に陥る。
     不調なので今日はここまで。しかし自分自身の行動変容は自分の問題なのでいくらか制御可能だが、運動が対象となるとその構成する人々が関わるので難しそう。
     といっても真に運動に参加するものなら志を同じくするから、比較的行動変容を促しやすいのかもしれんが。
+- date: 2026-02-09
+  bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
+  pages: 251 ~ 288
+  notes: |
+    8 対立を超えた会話。
+    組織がエサを手放した後にどうなるかは不確定なもの。共通のビジョンや進歩といったものはない。
+    1 つの考え方として、運動が目指すものを具体化せず可能性と捉え、具体的な行動は未来に向けて生み出し手は作り直していく。
+    これまで対立の源だった緊張関係を創造性の原動力に変換し、新たな道を探求していこう。
+    可能性を空の容れ物と例えるのいいな。中に何を入れるかはその時々、状況、そして自分たち次第か。未来が容れ物なわけか。
+    本書はこれで終わり。組織の行動変容の部分はまだあんまりピンときてないけどスルメ的に思考をめぐらして探っていこう。
