--- a/contents/books/books.yaml
+++ b/contents/books/books.yaml
@@ -119,3 +119,6 @@
 - id: breaking-through-gridlock
   bookTitle: なぜこの人はわかってくれないのか 対立を超える会話の技術
   bookAuthor: Jason J Jay, Gabriel Grant, 樋口武志
+- id: competing-with-unicorns
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  bookAuthor: Jonathan Rasmusson, 島田浩二, 角谷信太郎
