--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -93,3 +93,14 @@
     これまで対立の源だった緊張関係を創造性の原動力に変換し、新たな道を探求していこう。
     可能性を空の容れ物と例えるのいいな。中に何を入れるかはその時々、状況、そして自分たち次第か。未来が容れ物なわけか。
     本書はこれで終わり。組織の行動変容の部分はまだあんまりピンときてないけどスルメ的に思考をめぐらして探っていこう。
+- date: 2026-02-10
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: i ~ xix, 1 ~ 18
+  notes: |
+    最初から 1 章まで。薄いしこれまで見てきた企業のマネジメントとかと近そうなテーマだったので。
+    本書で言うユニコーン企業は投資的な意味でなくエンプラのような事業規模のスタートアップのような企業を指す。
+    本書ではスタートアップとエンプラのやり方を対比してるが、これは文中にもあるが解きたい問題に対する解法の違いやな。
+    これは TEAM OF TEAMS でも書かれてた不確定性に対するアプローチの違い。エンプラが予測可能でスタートアップが未知の領域に該当する。
+    学習する機会として解決すべき顧客の問題を探し高速に反復するのも、不確定性に対するアプローチがそうというだけ。
+    マネジメントの本を読んでかなり解像度上がったからより汎化した理解ができるようになった気がするわ。しらんけど。
+    次章以降目新しい気づきがなかったら驚きそうだが、でももしそうなら基礎的なマネジメントの原則が今でも通用するって風にも考えられるか。
