--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -104,3 +104,14 @@
     学習する機会として解決すべき顧客の問題を探し高速に反復するのも、不確定性に対するアプローチがそうというだけ。
     マネジメントの本を読んでかなり解像度上がったからより汎化した理解ができるようになった気がするわ。しらんけど。
     次章以降目新しい気づきがなかったら驚きそうだが、でももしそうなら基礎的なマネジメントの原則が今でも通用するって風にも考えられるか。
+- date: 2026-02-11
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 19 ~ 32
+  notes: |
+    2 章。
+    プロジェクトとミッション(プロダクト開発)の違いについて。プロジェクトは新規プロダクトの開発には向かない。
+    一応デマルコ本ではプロジェクトも反復開発できるように設計すればできるけど、不確定性が大きい時代に前もってマイルストンを置くのはリスクが有るというのがわたしの認識。
+    フィードバックを受けて発展させていくのはどちらでもできるが、期間の融通や作り上げるものの可塑性が違う印象。
+    ただ扱うものが違うのでこの差を取り上げてプロジェクトがだめというものでもないと思う。
+    あと経験上サ終とか EOL とか、期日が決まってて誰もやりたがらない仕事に関してはミッションはクソの役にも立たないので、使い分けが肝要よな。
+    個人的には、大きなミッションの元でプロジェクトを細分化して扱う、が今のところしっくり来てる。
