--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -115,3 +115,15 @@
     ただ扱うものが違うのでこの差を取り上げてプロジェクトがだめというものでもないと思う。
     あと経験上サ終とか EOL とか、期日が決まってて誰もやりたがらない仕事に関してはミッションはクソの役にも立たないので、使い分けが肝要よな。
     個人的には、大きなミッションの元でプロジェクトを細分化して扱う、が今のところしっくり来てる。
+- date: 2026-02-12
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 33 ~ 56
+  notes: |
+    3 章。
+    小規模な職能横断チームが自律的にプロダクトに責任を持つから速い。計画でなくインパクト(成果かな)を重視する。
+    自律≒長期的視点を持ち、デリバリーにまつわる無数のトレードオフのバランスを取れる権限を持つ。権限を与え仕事を任せて口出ししないことが自律性を育む。
+    手を動かす人だけで構成され、プロジェクトマネージャーやスクラムマスターの役割が必要だとしても、誰かがその役割をうまくこなしているから、人は必要ない。
+    そのためにも継続的に学習していて当事者意識を持って取り組める良い仕事をしたいと思っている情熱のある人を探そう。
+    アーキテクチャに触れてる部分もあったがそれはコンウェイの法則の文脈と思われる。割と内容は端折ってまとめた。
+    というのも、この自律性を尊重することが最大の速度と成果を生む話はこれまでもマネジメント本で読んできた内容なので、特に驚きはなかったため。
+    むしろそれだけ方法論に縛られて原則を忘れた組織が多かったからこそ本書ですごいぞと触れられたいう話なんやろな。確かにバスに誰を乗せるかという点で実現は難しい。
