--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -127,3 +127,15 @@
     アーキテクチャに触れてる部分もあったがそれはコンウェイの法則の文脈と思われる。割と内容は端折ってまとめた。
     というのも、この自律性を尊重することが最大の速度と成果を生む話はこれまでもマネジメント本で読んできた内容なので、特に驚きはなかったため。
     むしろそれだけ方法論に縛られて原則を忘れた組織が多かったからこそ本書ですごいぞと触れられたいう話なんやろな。確かにバスに誰を乗せるかという点で実現は難しい。
+- date: 2026-02-13
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 57 ~ 72
+  notes: |
+    4 章。自立した小規模な職能横断チームをスケールさせる。
+    小規模チーム(スクアッド)が担うミッションの類似するものを集めてトライブとする。トライブもスクアッド同様にビジネス領域に責任を持つ。
+    チャプターはトライブ内の同じ専門性を持つ人々のコミュニティ。コミュニティとしての学習と成長を促進する。
+    ギルドはさらにトライブを超えた専門性に興味を持つ人々の全社的なコミュニティ。正式な組織構造ではなく、横断的に知識共有や学習を促進する。
+    働くトライブすらも自分たちで選ぶ。多少のビジネス的な事情による根回しはあれど。
+    メッシュ状の知識共有ネットワーク構造って話か。マトリクス組織と違うのは職能で集められた方はサポートとして機能しビジネス領域の方が本家なところ。
+    残念なのは自分の所属する組織が数十人規模のためこの規模感のエンジニア組織のスケーリングに関する悩みが身を以てわからない点やな。
+    とはいえ、こういう実装パターンがあるという形で覚えておく。
