--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -139,3 +139,14 @@
     メッシュ状の知識共有ネットワーク構造って話か。マトリクス組織と違うのは職能で集められた方はサポートとして機能しビジネス領域の方が本家なところ。
     残念なのは自分の所属する組織が数十人規模のためこの規模感のエンジニア組織のスケーリングに関する悩みが身を以てわからない点やな。
     とはいえ、こういう実装パターンがあるという形で覚えておく。
+- date: 2026-02-14
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 73 ~ 88
+  notes: |
+    5 章。社運を賭ける大規模プロジェクト。
+    小規模チームの自律性を維持しつつ、会社として注力したい重大なプロジェクトをカンパニーベット≒賭けとして示す。
+    ベットは Data,Insight,Belief,Bet の情報が示され、なぜ重要なのかが明確に示される。
+    ベットの選任のマネージャをつけ、関係者のコミュニケーションをオープンに保ち部外者感をなくす。
+    小規模チームは自分たちのミッションと照らし合わせ自律的にベットに協調するか、合わないならミッションを優先するか決める。あくまで小規模チームの自律性が最優先。
+    ベットはチームに高負荷を強いるため一度に複数は行わない。従来企業では話に上がらないような反直感的なベットこそがディスラプティブなイノベーションにつながる。
+    ベットは経営トップを起点に発するというのは GE のやつでも見たようなトップがリスクを負うことが現場を動きやすくさせるアレやな。ここは経営層が何を担うべきかも示していて、つながるね。
