--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -150,3 +150,14 @@
     小規模チームは自分たちのミッションと照らし合わせ自律的にベットに協調するか、合わないならミッションを優先するか決める。あくまで小規模チームの自律性が最優先。
     ベットはチームに高負荷を強いるため一度に複数は行わない。従来企業では話に上がらないような反直感的なベットこそがディスラプティブなイノベーションにつながる。
     ベットは経営トップを起点に発するというのは GE のやつでも見たようなトップがリスクを負うことが現場を動きやすくさせるアレやな。ここは経営層が何を担うべきかも示していて、つながるね。
+- date: 2026-02-15
+  bookTitle: ユニコーン企業のひみつ Spotify で学んだソフトウェアづくりと働き方
+  pages: 89 ~ 116
+  notes: |
+    6 ~ 7 章。
+    テック企業のマネジメントはフラットで何をすべきか誰かが指示することはない。スピードが得られるなら、金を使うべきだし信頼し権限を与える。
+    情報の透明性が高いほどチームの自律性が高まる。チーム同士が互いに助けあう。この自由さは責任とセットで、従来型企業に比べると責任は重い。
+    テック企業は技術を効果的に活用することで生産性に投資する。エンジニアリングチームの生産性を高めミッションを持つチームがある。インフラ等もセルフサービスで提供されブロックされない。
+    高い品質を要求されるからこそ質の高い仕事になる。フィーチャーフラグとリリーストレインでの素早いリリース。継続的な改善と学習の文化。
+    本書の内容は学んできた内容から外れることが 1 つもないんのでびっくりすることもないが、復習として、また実例としては役に立つな。
+    昔、自分でホテルや新幹線を予約できない、アバターの変更もできない会社にいたこともあるが窮屈で何の責任もなくて、全く面白くなかった。
