--- a/contents/booklogs/2026/2026-02.yml
+++ b/contents/booklogs/2026/2026-02.yml
@@ -161,3 +161,12 @@
     高い品質を要求されるからこそ質の高い仕事になる。フィーチャーフラグとリリーストレインでの素早いリリース。継続的な改善と学習の文化。
     本書の内容は学んできた内容から外れることが 1 つもないんのでびっくりすることもないが、復習として、また実例としては役に立つな。
     昔、自分でホテルや新幹線を予約できない、アバターの変更もできない会社にいたこともあるが窮屈で何の責任もなくて、全く面白くなかった。
+- date: 2026-02-16
+  bookTitle: ファスト＆スロー
+  pages: 37 ~ 73
+  notes: |
+    1 ~ 2 章。システム 1, 2 の概要みたいな感じ。
+    システム 1 は常時稼働し単純な判断をする。システム 2 はより複雑な判断をするが有限の注意力を必要とし、最小努力の法則で必要なときだけ動く。これらはときには相互に競合する。
+    見えないゴリラの実験からシステム 2 が割ける注意力に限りがあることがわかる。また明らかなことにも気づかない、その傾向にすら気づかないことも示唆する。
+    ビジネスでも良く知られた話題なのでおさらいという感じ。本書はモデルとしてシステム 1, 2 分けてるだけと書いてるので、完全に二分できるかのように単純化して理解してる勢が誤読してるというのも良くわかる。
+    2 章はシステム 1 と副題にあるけどシステム 2 の話が多かったのミスリードな感じがした。
